--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.2.8",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@remixicon/react": "^4.6.0",
     "@tremor/react": "^3.18.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "tailwind-variants": "^3.1.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/user-event": "^13.5.0",
