--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@headlessui/react": "^2.2.8",
     "@radix-ui/react-slot": "^1.2.3",
     "@remixicon/react": "^4.6.0",
+    "@tanstack/react-table": "^8.21.3",
     "@tremor/react": "^3.18.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
